# pybids-reports

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  long_description.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: release.yml
.github/workflows/: docs.yml  package.yml  pre-release.yml  pypi-publish.yml  stable.yml  testing.yml  testing_cli.yml
bids/ext/reports/: __init__.py  _version.py  cli.py  due.py  logger.py  parameters.py  parsing.py  report.py  templates.py  utils.py
bids/ext/reports/tests/: conftest.py  test_cli.py  test_parameters.py  test_parsing.py  test_report.py  test_templates.py
bids/ext/reports/tests/data/: sub-01_ses-01_sample-A_SEM.json
bids/reports/: __init__.py  due.py  parameters.py  parsing.py  report.py  utils.py
bids/reports/reports/: utils.py
bids/reports/tests/: conftest.py  test_parameters.py  test_parsing.py  test_report.py
docs/source/: cli.md  cli.rst  conf.py  examples.rst  index.rst  reports.rst
docs/source/examples/: generate_report.ipynb
docs/source/sphinxext/: github_link.py
reports/: report.py
tests/: conftest.py  test_cli.py  test_parameters.py  test_parsing.py  test_report.py
tests/data/: sub-01_ses-01_pet.json  sub-Sub103_asl.json
tests/data/ds000117/: README  dataset_description.json  task-facerecognition_meg.json
tests/data/ds000117/sub-01/ses-meg/meg/: sub-01_ses-meg_task-facerecognition_proc-sss_coordsystem.json
tests/data/ds000117/sub-01/ses-mri/anat/: sub-01_ses-mri_acq-mprage_T1w.json
tests/data/ds000117/sub-01/ses-mri/fmap/: sub-01_ses-mri_phasediff.json
tests/data/ds000117/sub-02/ses-meg/meg/: sub-02_ses-meg_task-facerecognition_coordsystem.json
tests/data/ds000117/sub-02/ses-mri/anat/: sub-02_ses-mri_acq-mprage_T1w.json
tests/data/ds000117/sub-02/ses-mri/dwi/: sub-02_ses-mri_dwi.bvec  sub-02_ses-mri_dwi.json
tests/data/ds000117/sub-02/ses-mri/fmap/: sub-02_ses-mri_phasediff.json
tools/: prep_zenodo.py  run_on_examples.py  run_on_examples.sh  update_changes.sh
