[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "PyBIDS Developers", email = "bids-discussion@googlegroups.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "chevron",
    "pybids>=0.15",
    "nibabel",
    "num2words",
    "rich"
]
description = "pybids-reports: report generator for BIDS datasets"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = [{name = "PyBIDS Developers", email = "bids-discussion@googlegroups.com"}]
name = "pybids_reports"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
ci_tests = [
    "pybids_reports[test]",
    "pytest-xdist"
]
dev = [
    "pybids_reports[doc]",
    "pybids_reports[test]"
]
doc = [
    "furo",
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx_gallery"
]
docs = ["pybids_reports[doc]"]
test = [
    "codecov",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "pytest>=3.3",
    "pytest-cov"
]
tests = ["pybids_reports[test]"]

[project.scripts]
pybids_reports = "bids.ext.reports.cli:cli"

[project.urls]
"Bug tracker" = "http://github.com/bids-standard/pybids-reports/issues"
Documentation = "https://pybids-reports.readthedocs.io/en/latest/"
Homepage = "http://github.com/bids-standard/pybids-reports"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | bids/ext/reports/_version.py
  | bids/ext/reports/due.py
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py38']

[tool.codespell]
ignore-words-list = "te"
skip = "./.git,bids/ext/reports/tests/data/*"

[tool.coverage.paths]
source = [
    "bids/ext/reports",
    "**/bids/ext/reports"
]

[tool.coverage.report]
include_namespace_packages = true

[tool.hatch.build.hooks.vcs]
version-file = "bids/ext/reports/_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["bids/ext/reports"]
packages = ["bids"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 99
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = ['bids/ext/reports/tests/']
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'bids.ext.reports.tests.*',
    'bids.ext.reports._version.*',
    'bids.ext.reports.due.*'
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --doctest-modules --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
minversion = "6.0"
norecursedirs = "bids/ext/reports/templates"
xfail_strict = true
