[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "doc"},
    "tox",
    "tox-uv",
    "pre-commit"
]
doc = [
    "furo",
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx_gallery"
]
docs = [{include-group = "doc"}]
test = [
    "codecov",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist"
]
tests = [{include-group = "test"}]

[project]
authors = [{name = "PyBIDS Developers", email = "bids-discussion@googlegroups.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "chevron",
    "pybids>=0.18",
    "nibabel",
    "num2words",
    "rich"
]
description = "pybids-reports: report generator for BIDS datasets"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = [{name = "PyBIDS Developers", email = "bids-discussion@googlegroups.com"}]
name = "pybids_reports"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pybids_reports = "bids.ext.reports.cli:cli"

[project.urls]
"Bug tracker" = "http://github.com/bids-standard/pybids-reports/issues"
Documentation = "https://pybids-reports.readthedocs.io/en/latest/"
Homepage = "http://github.com/bids-standard/pybids-reports"

[tool.codespell]
ignore-words-list = "te"
skip = "./.git,tests/data/*"

[tool.coverage.paths]
source = [
    "bids/ext/reports",
    "**/bids/ext/reports"
]

[tool.coverage.report]
include_namespace_packages = true
# Regexes for lines to exclude from consideration
omit = [
    "*/templates/*"
]

[tool.hatch.build.hooks.vcs]
version-file = "bids/ext/reports/_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["bids/ext/reports"]
packages = ["bids"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'bids.ext.reports._version.*',
    'bids.ext.reports.due.*'
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
filterwarnings = ["error"]
junit_family = "xunit2"
log_level = "INFO"
minversion = "6.0"
norecursedirs = "bids/ext/reports/templates"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
extend-exclude = ["bids/ext/reports/_version.py"]
include = [
    "pyproject.toml",
    "bids",
    "tools",
    "doc"
]
indent-width = 4
line-length = 99

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "ARG002",
    "ERA001",
    "D100",
    "D101",
    "D103",
    "D105",
    "D205",
    "N803",
    "N806",
    "PERF401",
    "PLR2004",
    "PTH100",
    "PTH113",
    "PTH118",
    "PTH123",
    "PTH120",
    "PTH208",
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PD",
    "PGH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 6
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 100
