[metadata]
name = pybids-reports
url = http://github.com/bids-standard/pybids-reports
author = PyBIDS Developers
author_email = bids-discussion@googlegroups.com
maintainer = PyBIDS Developers
maintainer_email = bids-discussion@googlegroups.com
description = pybids-reports: report generator for BIDS datasets
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    pybids
    num2words
tests_require =
    pytest >=3.3
    mock
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.2
    numpydoc
    sphinx_rtd_theme
docs =
    %(doc)s
test =
    pytest >=3.3
tests =
    %(test)s
ci_tests =
    %(test)s
    codecov
    pytest-cov
    pytest-xdist
dev =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = reports/_version.py
versionfile_build = reports/_version.py
tag_prefix =
parentdir_prefix =

[codespell]
skip = ./.git,external,versioneer.py,_version.py
ignore-words = .github/codespell_ignore_words.txt
