[metadata]
name = pybids_reports
description = pybids-reports: report generator for BIDS datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/bids-standard/pybids-reports
author = PyBIDS Developers
author_email = bids-discussion@googlegroups.com
maintainer = PyBIDS Developers
maintainer_email = bids-discussion@googlegroups.com
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
install_requires =
    chevron
    nibabel
    num2words
    pybids>=0.15
python_requires = >=3.7
include_package_data = False

[options.packages.find]
include =
    bids.ext.EXTENSION
    bids.ext.EXTENSION.*

[options.extras_require]
ci_tests =
    %(test)s
    pytest-xdist
dev =
    %(doc)s
    %(test)s
doc =
    numpydoc
    sphinx>=2.2
    sphinx-rtd-theme
docs =
    %(doc)s
test =
    codecov
    flake8-black
    flake8-docstrings
    flake8-isort
    pytest>=3.3
    pytest-cov
tests =
    %(test)s

[options.package_data]
* =
    config/*

[versioneer]
VCS = git
style = pep440
versionfile_source = bids/ext/reports/_version.py
versionfile_build = bids/ext/reports/_version.py

[codespell]
skip = ./.git,external,versioneer.py,_version.py
ignore-words = .github/codespell_ignore_words.txt

[flake8]
max-line-length = 99
exclude = *build/,_version.py,due.py
putty-ignore =
    */__init__.py : +F401
ignore = E203,E402,E722,W503
docstring-convention = numpy

[mypy]
exclude = ['bids/ext/reports/tests/']

[mypy-ext.reports.tests.*]
ignore_errors = True

[mypy-ext.reports._version.*]
ignore_errors = True

[mypy-ext.reports.due.*]
ignore_errors = True

[mypy-versioneer.*]
ignore_errors = True
